--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <br>
                     讓我們更親近這片土地</div>
                 <div class="sub-sign fc-sub dfaic">
-                    <img src="images/Icon/spot24_Y.png" alt="">
+                    <img src="css/images/icon/spot24_Y.png" alt="">
                     <span class="sub-c">台灣旅遊景點導覽</span>
                     <span class="sub-e fw-7">Taiwan Travel Guide</span>
                 </div>
@@ -75,7 +75,7 @@
                 <div class="top-title fs-b fw-3 fc-title">近期活動</div>
                 <div class="section-more dfaic">
                     <p class="more-w fc-o">查看更多活動</p>
-                    <img src="images/Icon/arrow-right16_R.png" alt="">
+                    <img src="css/images/Icon/arrow-right16_R.svg" alt="">
                 </div>
             </div>
             <div class="event-main">
@@ -88,12 +88,12 @@
                         </div>
                         <div class="event-detail">
                             <div class="event-location dfaic">
-                                <img src="images/Icon/spot16.png" alt="">
+                                <img src="css/images/icon/spot16.svg" alt="">
                                 <span class="place fc-sub">南投縣</span>
                             </div>
                             <div class="event-more dfaic">
                                 <span class="more-p fc-g">詳細介紹</span>
-                                <img src="images/Icon/arrow-right16_G.png" alt="">
+                                <img src="css/images/icon/arrow-right16_G.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -107,12 +107,12 @@
                         </div>
                         <div class="event-detail">
                             <div class="event-location dfaic">
-                                <img src="images/Icon/spot16.png" alt="">
+                                <img src="css/images/icon/spot16.svg" alt="">
                                 <span class="place fc-sub">高雄市</span>
                             </div>
                             <div class="event-more dfaic">
                                 <span class="more-p fc-g">詳細介紹</span>
-                                <img src="images/Icon/arrow-right16_G.png" alt="">
+                                <img src="css/images/icon/arrow-right16_G.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -126,12 +126,12 @@
                         </div>
                         <div class="event-detail">
                             <div class="event-location dfaic">
-                                <img src="images/Icon/spot16.png" alt="">
+                                <img src="css/images/icon/spot16.svg" alt="">
                                 <span class="place fc-sub">新北市</span>
                             </div>
                             <div class="event-more dfaic">
                                 <span class="more-p fc-g">詳細介紹</span>
-                                <img src="images/Icon/arrow-right16_G.png" alt="">
+                                <img src="css/images/icon/arrow-right16_G.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -145,12 +145,12 @@
                         </div>
                         <div class="event-detail">
                             <div class="event-location dfaic">
-                                <img src="images/Icon/spot16.png" alt="">
+                                <img src="css/images/icon/spot16.svg" alt="">
                                 <span class="place fc-sub">金門縣</span>
                             </div>
                             <div class="event-more dfaic">
                                 <span class="more-p fc-g ">詳細介紹</span>
-                                <img src="images/Icon/arrow-right16_G.png" alt="">
+                                <img src="css/images/icon/arrow-right16_G.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                 <div class="top-title fs-b fw-3 fc-title">熱門打卡景點</div>
                 <div class="section-more dfaic">
                     <p class="more-w fc-o">查看更多活動</p>
-                    <img src="images/Icon/arrow-right16_R.png" alt="">
+                    <img src="css/images/icon/arrow-right16_R.svg" alt="">
                 </div>
             </div>
             <div class="spot-main">
@@ -170,7 +170,7 @@
                     <div class="spot-1 spot-pic"></div>
                     <p class="spot-name fc-pri fw-7">龜山島牛奶海</p>
                     <div class="event-location dfaic">
-                        <img src="images/Icon/spot16.png" alt="">
+                        <img src="css/images/icon/spot16.svg" alt="">
                         <span class="place fc-sub">宜蘭縣</span>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
                     <div class="spot-2 spot-pic"></div>
                     <p class="spot-name fc-pri fw-7">高美濕地(高美野生動...</p>
                     <div class="event-location dfaic">
-                        <img src="images/Icon/spot16.png" alt="">
+                        <img src="css/images/icon/spot16.svg" alt="">
                         <span class="place fc-sub">臺中市</span>
                     </div>
                 </div>
@@ -186,7 +186,7 @@
                     <div class="spot-3 spot-pic"></div>
                     <p class="spot-name fc-pri fw-7">溪頭自然教育園區</p>
                     <div class="event-location dfaic">
-                        <img src="images/Icon/spot16.png" alt="">
+                        <img src="css/images/icon/spot16.svg" alt="">
                         <span class="place fc-sub">南投縣</span>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                     <div class="spot-4 spot-pic"></div>
                     <p class="spot-name fc-pri fw-7">九份老街</p>
                     <div class="event-location dfaic">
-                        <img src="images/Icon/spot16.png" alt="">
+                        <img src="css/images/icon/spot16.svg" alt="">
                         <span class="place fc-sub">新北市</span>
                     </div>
                 </div>
@@ -205,7 +205,7 @@
                 <div class="top-title fs-b fw-3 fc-title">一再回訪美食</div>
                 <div class="section-more dfaic">
                     <p class="more-w fc-o">查看更多活動</p>
-                    <img src="images/Icon/arrow-right16_R.png" alt="">
+                    <img src="css/images/icon/arrow-right16_R.svg" alt="">
                 </div>
             </div>
             <div class="spot-main">
@@ -213,7 +213,7 @@
                     <div class="food-1 spot-pic"></div>
                     <p class="spot-name fc-pri fw-7">金都餐廳</p>
                     <div class="event-location dfaic">
-                        <img src="images/Icon/spot16.png" alt="">
+                        <img src="css/images/icon/spot16.svg" alt="">
                         <span class="place fc-sub">南投縣</span>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
                     <div class="food-2 spot-pic"></div>
                     <p class="spot-name fc-pri fw-7">一中8兩碳烤雞排</p>
                     <div class="event-location dfaic">
-                        <img src="images/Icon/spot16.png" alt="">
+                        <img src="css/images/icon/spot16.svg" alt="">
                         <span class="place fc-sub">臺中市</span>
                     </div>
                 </div>
@@ -229,7 +229,7 @@
                     <div class="food-3 spot-pic"></div>
                     <p class="spot-name fc-pri fw-7">名根烤肉食材宅配外送</p>
                     <div class="event-location dfaic">
-                        <img src="images/Icon/spot16.png" alt="">
+                        <img src="css/images/icon/spot16.svg" alt="">
                         <span class="place fc-sub">新北市</span>
                     </div>
                 </div>
@@ -237,7 +237,7 @@
                     <div class="food-4 spot-pic"></div>
                     <p class="spot-name fc-pri fw-7">石桌羊肉店</p>
                     <div class="event-location dfaic">
-                        <img src="images/Icon/spot16.png" alt="">
+                        <img src="css/images/icon/spot16.svg" alt="">
                         <span class="place fc-sub">嘉義縣</span>
                     </div>
                 </div>
