--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <br>
                     讓我們更親近這片土地</div>
                 <div class="sub-sign fc-sub dfaic">
-                    <img src="css/images/icon/spot24_Y.png" alt="">
+                    <img src="https://github.com/maggie19921001/travel-taiwan/blob/main/css/images/Icon/spot24_Y.png?raw=true" alt="">
                     <span class="sub-c">台灣旅遊景點導覽</span>
                     <span class="sub-e fw-7">Taiwan Travel Guide</span>
                 </div>
@@ -75,7 +75,7 @@
                 <div class="top-title fs-b fw-3 fc-title">近期活動</div>
                 <div class="section-more dfaic">
                     <p class="more-w fc-o">查看更多活動</p>
-                    <img src="css/images/Icon/arrow-right16_R.svg" alt="">
+                    <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_R.svg" alt="">
                 </div>
             </div>
             <div class="event-main">
@@ -93,7 +93,7 @@
                             </div>
                             <div class="event-more dfaic">
                                 <span class="more-p fc-g">詳細介紹</span>
-                                <img src="css/images/icon/arrow-right16_G.svg" alt="">
+                                <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_G.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                             </div>
                             <div class="event-more dfaic">
                                 <span class="more-p fc-g">詳細介紹</span>
-                                <img src="css/images/icon/arrow-right16_G.svg" alt="">
+                                <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_G.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -131,7 +131,7 @@
                             </div>
                             <div class="event-more dfaic">
                                 <span class="more-p fc-g">詳細介紹</span>
-                                <img src="css/images/icon/arrow-right16_G.svg" alt="">
+                                <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_G.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                             </div>
                             <div class="event-more dfaic">
                                 <span class="more-p fc-g ">詳細介紹</span>
-                                <img src="css/images/icon/arrow-right16_G.svg" alt="">
+                                <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_G.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                 <div class="top-title fs-b fw-3 fc-title">熱門打卡景點</div>
                 <div class="section-more dfaic">
                     <p class="more-w fc-o">查看更多活動</p>
-                    <img src="css/images/icon/arrow-right16_R.svg" alt="">
+                    <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_R.svg" alt="">
                 </div>
             </div>
             <div class="spot-main">
@@ -205,7 +205,7 @@
                 <div class="top-title fs-b fw-3 fc-title">一再回訪美食</div>
                 <div class="section-more dfaic">
                     <p class="more-w fc-o">查看更多活動</p>
-                    <img src="css/images/icon/arrow-right16_R.svg" alt="">
+                    <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_R.svg" alt="">
                 </div>
             </div>
             <div class="spot-main">
