--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
-    <link rel="stylesheet" href="css/all.css">
+    
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
     <!-- header -->
@@ -36,13 +37,12 @@
                     <br>
                     讓我們更親近這片土地</div>
                 <div class="sub-sign fc-sub dfaic">
-                    <img src="https://github.com/maggie19921001/travel-taiwan/blob/main/css/images/Icon/spot24_Y.png?raw=true" alt="">
-                    <span class="sub-c">台灣旅遊景點導覽</span>
+                    <span class="sub-c"><img src="https://github.com/maggie19921001/travel-taiwan/blob/main/css/images/Icon/spot24_Y.png?raw=true" alt="spot_decoration">台灣旅遊景點導覽</span>
                     <span class="sub-e fw-7">Taiwan Travel Guide</span>
                 </div>
             </div>
             <div class="search-box">
-                <select class="choose">
+                <select class="choose fs-m">
                     <option class="choose-op" value="scene" class="fs-m fw-4">探索景點</option>
                     <option class="choose-op" value="event" class="fs-m fw-4">節慶活動</option>
                     <option class="choose-op" value="food" class="fs-m fw-4">品嚐美食</option>
@@ -83,16 +83,16 @@
                     <div class="event-1 event-pic"></div>
                     <div class="event-content">
                         <div class="event-topic">
-                            <p class="event-date fs-s fs-4 fc-sub">2021/10/30 - 2021/11/13</p>
-                            <p class="event-name fc-pri fw-7">2021 日月潭花火音樂嘉年華</p>
+                            <p class="event-date fs-s fs-4 fc-sub">2024/10/30 - 2024/11/13</p>
+                            <p class="event-name fc-pri fw-7">2024日月潭花火音樂嘉年華</p>
                         </div>
                         <div class="event-detail">
                             <div class="event-location dfaic">
                                 <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/587c9b7686a4f37baa262727752c06943a18772a/css/images/Icon/spot16.svg" alt="">
-                                <span class="place fc-sub">南投縣</span>
+                                <span class="place fc-sub fs-s">南投縣</span>
                             </div>
                             <div class="event-more dfaic">
-                                <span class="more-p fc-g">詳細介紹</span>
+                                <span class="more-p fc-g fs-s">詳細介紹</span>
                                 <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_G.svg" alt="">
                             </div>
                         </div>
@@ -102,16 +102,16 @@
                     <div class="event-2 event-pic"></div>
                     <div class="event-content">
                         <div class="event-topic">
-                            <p class="event-date fs-s fs-4 fc-sub">2021/10/30 - 2022/02/08</p>
+                            <p class="event-date fs-s fs-4 fc-sub">2024/10/30 - 2025/02/08</p>
                             <p class="event-name fc-pri fw-7">山城花語溫泉系列活動－寶來不老溫泉季</p>
                         </div>
                         <div class="event-detail">
                             <div class="event-location dfaic">
                                 <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/587c9b7686a4f37baa262727752c06943a18772a/css/images/Icon/spot16.svg" alt="">
-                                <span class="place fc-sub">高雄市</span>
+                                <span class="place fc-sub fs-s">高雄市</span>
                             </div>
                             <div class="event-more dfaic">
-                                <span class="more-p fc-g">詳細介紹</span>
+                                <span class="more-p fc-g fs-s">詳細介紹</span>
                                 <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_G.svg" alt="">
                             </div>
                         </div>
@@ -121,16 +121,16 @@
                     <div class="event-3 event-pic"></div>
                     <div class="event-content">
                         <div class="event-topic">
-                            <p class="event-date fs-s fs-4 fc-sub">2021/11/21 - 2021/11/21</p>
+                            <p class="event-date fs-s fs-4 fc-sub">2024/11/21 - 2024/11/21</p>
                             <p class="event-name fc-pri fw-7">新北市萬金石馬拉松</p>
                         </div>
                         <div class="event-detail">
                             <div class="event-location dfaic">
                                 <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/587c9b7686a4f37baa262727752c06943a18772a/css/images/Icon/spot16.svg" alt="">
-                                <span class="place fc-sub">新北市</span>
+                                <span class="place fc-sub fs-s">新北市</span>
                             </div>
                             <div class="event-more dfaic">
-                                <span class="more-p fc-g">詳細介紹</span>
+                                <span class="more-p fc-g fs-s">詳細介紹</span>
                                 <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_G.svg" alt="">
                             </div>
                         </div>
@@ -140,16 +140,16 @@
                     <div class="event-4 event-pic"></div>
                     <div class="event-content">
                         <div class="event-topic">
-                            <p class="event-date fs-s fs-4 fc-sub">2021/11/27 - 2021/11/28</p>
+                            <p class="event-date fs-s fs-4 fc-sub">2024/11/27 - 2024/11/28</p>
                             <p class="event-name fc-pri fw-7">2021 金門坑道音樂節</p>
                         </div>
                         <div class="event-detail">
                             <div class="event-location dfaic">
                                 <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/587c9b7686a4f37baa262727752c06943a18772a/css/images/Icon/spot16.svg" alt="">
-                                <span class="place fc-sub">金門縣</span>
+                                <span class="place fc-sub fs-s">金門縣</span>
                             </div>
                             <div class="event-more dfaic">
-                                <span class="more-p fc-g ">詳細介紹</span>
+                                <span class="more-p fc-g fs-s">詳細介紹</span>
                                 <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_G.svg" alt="">
                             </div>
                         </div>
