--- a/search_results.html
+++ b/search_results.html
@@ -22,9 +22,9 @@
                 <input type="checkbox" id="menu-control">
                 <label for="menu-control" class="menu-btn"></label>
                 <ul class="menu-list fs-m fc-sub manu-list">
-                    <li class="pages"><a href="html/1_spot.html">探索景點</a></li>
-                    <li class="pages"><a href="html/2_event.html">節慶活動</a></li>
-                    <li class="pages"><a href="html/3_food.html">品嚐美食</a></li>
+                    <li class="pages"><a href="1_spot.html">探索景點</a></li>
+                    <li class="pages"><a href="2_event.html">節慶活動</a></li>
+                    <li class="pages"><a href="3_food.html">品嚐美食</a></li>
                 </ul>
             </nav>    
         </div>
