img path adjust

--- a/detail.html
+++ b/detail.html
@@ -72,19 +72,19 @@
                 <div class="nearby">
                     <a href="#">
                     <div class="near-scene near-frame">
-                        <img class="near-icon" src="css/images/icon/nearby-scene30.png">
+                        <img class="near-icon" src="https://github.com/maggie19921001/travel-taiwan/blob/main/css/images/Icon/nearby-scene30.png?raw=true">
                         <p class="fs-s fc-g fw-7">附近景點</p>
                     </div>
                     </a>
                     <a href="#">
                     <div class="near-event  near-frame">
-                        <img class="near-icon" src="css/images/icon/nearby-event30.png">
+                        <img class="near-icon" src="https://github.com/maggie19921001/travel-taiwan/blob/main/css/images/Icon/nearby-event30.png?raw=true">
                         <p class="fs-s fc-g fw-7">附近活動</p>
                     </div>
                     </a>
                     <a href="#">
                     <div class="near-food  near-frame">
-                        <img class="near-icon" src="css/images/icon/nearby-food30.png">
+                        <img class="near-icon" src="https://github.com/maggie19921001/travel-taiwan/blob/main/css/images/Icon/nearby-food30.png?raw=true">
                         <p class="fs-s fc-g fw-7">附近美食</p>
                     </div>
                     </a>
@@ -94,38 +94,6 @@
         <section class="more-spot">
             <p class="title top-title fs-b fw-3 fc-title">還有這些不能錯過的景點</p>
             <div class="spot-frame">
-                <div class="spot-box">
-                    <div class="spot-1 spot-pic"></div>
-                    <p class="spot-name fc-pri fw-7">龜山島牛奶海</p>
-                    <div class="event-location dfaic">
-                        <img src="css/images/icon/spot16.svg" alt="">
-                        <span class="place fc-sub">宜蘭縣</span>
-                    </div>
-                </div>
-                <div class="spot-box">
-                    <div class="spot-1 spot-pic"></div>
-                    <p class="spot-name fc-pri fw-7">龜山島牛奶海</p>
-                    <div class="event-location dfaic">
-                        <img src="css/images/icon/spot16.svg" alt="">
-                        <span class="place fc-sub">宜蘭縣</span>
-                    </div>
-                </div>
-                <div class="spot-box">
-                    <div class="spot-1 spot-pic"></div>
-                    <p class="spot-name fc-pri fw-7">龜山島牛奶海</p>
-                    <div class="event-location dfaic">
-                        <img src="css/images/icon/spot16.svg" alt="">
-                        <span class="place fc-sub">宜蘭縣</span>
-                    </div>
-                </div>
-                <div class="spot-box">
-                    <div class="spot-1 spot-pic"></div>
-                    <p class="spot-name fc-pri fw-7">龜山島牛奶海</p>
-                    <div class="event-location dfaic">
-                        <img src="css/images/icon/spot16.svg" alt="">
-                        <span class="place fc-sub">宜蘭縣</span>
-                    </div>
-                </div>
             </div>
         </section>
     </div>
