首頁資訊接API

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>台灣走走</title>
     
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -78,83 +78,8 @@
                     <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_R.svg" alt="">
                 </div>
             </div>
-            <div class="event-main">
-                <div class="event-box">
-                    <div class="event-1 event-pic"></div>
-                    <div class="event-content">
-                        <div class="event-topic">
-                            <p class="event-date fs-s fs-4 fc-sub">2024/10/30 - 2024/11/13</p>
-                            <p class="event-name fc-pri fw-7">2024日月潭花火音樂嘉年華</p>
-                        </div>
-                        <div class="event-detail">
-                            <div class="event-location dfaic">
-                                <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/587c9b7686a4f37baa262727752c06943a18772a/css/images/Icon/spot16.svg" alt="">
-                                <span class="place fc-sub fs-s">南投縣</span>
-                            </div>
-                            <div class="event-more dfaic">
-                                <span class="more-p fc-g fs-s">詳細介紹</span>
-                                <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_G.svg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="event-box">
-                    <div class="event-2 event-pic"></div>
-                    <div class="event-content">
-                        <div class="event-topic">
-                            <p class="event-date fs-s fs-4 fc-sub">2024/10/30 - 2025/02/08</p>
-                            <p class="event-name fc-pri fw-7">山城花語溫泉系列活動－寶來不老溫泉季</p>
-                        </div>
-                        <div class="event-detail">
-                            <div class="event-location dfaic">
-                                <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/587c9b7686a4f37baa262727752c06943a18772a/css/images/Icon/spot16.svg" alt="">
-                                <span class="place fc-sub fs-s">高雄市</span>
-                            </div>
-                            <div class="event-more dfaic">
-                                <span class="more-p fc-g fs-s">詳細介紹</span>
-                                <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_G.svg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="event-box">
-                    <div class="event-3 event-pic"></div>
-                    <div class="event-content">
-                        <div class="event-topic">
-                            <p class="event-date fs-s fs-4 fc-sub">2024/11/21 - 2024/11/21</p>
-                            <p class="event-name fc-pri fw-7">新北市萬金石馬拉松</p>
-                        </div>
-                        <div class="event-detail">
-                            <div class="event-location dfaic">
-                                <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/587c9b7686a4f37baa262727752c06943a18772a/css/images/Icon/spot16.svg" alt="">
-                                <span class="place fc-sub fs-s">新北市</span>
-                            </div>
-                            <div class="event-more dfaic">
-                                <span class="more-p fc-g fs-s">詳細介紹</span>
-                                <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_G.svg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="event-box">
-                    <div class="event-4 event-pic"></div>
-                    <div class="event-content">
-                        <div class="event-topic">
-                            <p class="event-date fs-s fs-4 fc-sub">2024/11/27 - 2024/11/28</p>
-                            <p class="event-name fc-pri fw-7">2021 金門坑道音樂節</p>
-                        </div>
-                        <div class="event-detail">
-                            <div class="event-location dfaic">
-                                <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/587c9b7686a4f37baa262727752c06943a18772a/css/images/Icon/spot16.svg" alt="">
-                                <span class="place fc-sub fs-s">金門縣</span>
-                            </div>
-                            <div class="event-more dfaic">
-                                <span class="more-p fc-g fs-s">詳細介紹</span>
-                                <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_G.svg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="event-main" id="event-main">
+               <!--loadEvent-->
             </div>
         </section>
         <section class="hot-spot">
@@ -165,39 +90,8 @@
                     <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_R.svg" alt="">
                 </div>
             </div>
-            <div class="spot-main">
-                <div class="spot-box">
-                    <div class="spot-1 spot-pic"></div>
-                    <p class="spot-name fc-pri fw-7">龜山島牛奶海</p>
-                    <div class="event-location dfaic">
-                        <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/587c9b7686a4f37baa262727752c06943a18772a/css/images/Icon/spot16.svg" alt="">
-                        <span class="place fc-sub">宜蘭縣</span>
-                    </div>
-                </div>
-                <div class="spot-box">
-                    <div class="spot-2 spot-pic"></div>
-                    <p class="spot-name fc-pri fw-7">高美濕地(高美野生動...</p>
-                    <div class="event-location dfaic">
-                        <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/587c9b7686a4f37baa262727752c06943a18772a/css/images/Icon/spot16.svg" alt="">
-                        <span class="place fc-sub">臺中市</span>
-                    </div>
-                </div>
-                <div class="spot-box">
-                    <div class="spot-3 spot-pic"></div>
-                    <p class="spot-name fc-pri fw-7">溪頭自然教育園區</p>
-                    <div class="event-location dfaic">
-                        <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/587c9b7686a4f37baa262727752c06943a18772a/css/images/Icon/spot16.svg" alt="">
-                        <span class="place fc-sub">南投縣</span>
-                    </div>
-                </div>
-                <div class="spot-box">
-                    <div class="spot-4 spot-pic"></div>
-                    <p class="spot-name fc-pri fw-7">九份老街</p>
-                    <div class="event-location dfaic">
-                        <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/587c9b7686a4f37baa262727752c06943a18772a/css/images/Icon/spot16.svg" alt="">
-                        <span class="place fc-sub">新北市</span>
-                    </div>
-                </div>
+            <div class="spot-main" id="spot-main">
+                <!--loadSpot-->
             </div>
         </section>
         <section class="good-food">
@@ -208,8 +102,8 @@
                     <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/9c2e592f364f12b1ed54e54ce984f8c3dc1268cd/css/images/Icon/arrow-right16_R.svg" alt="">
                 </div>
             </div>
-            <div class="spot-main">
-                <div class="spot-box">
+            <div class="spot-main" id="food-main">
+                <!-- <div class="spot-box">
                     <div class="food-1 spot-pic"></div>
                     <p class="spot-name fc-pri fw-7">金都餐廳</p>
                     <div class="event-location dfaic">
@@ -240,7 +134,7 @@
                         <img src="https://raw.githubusercontent.com/maggie19921001/travel-taiwan/587c9b7686a4f37baa262727752c06943a18772a/css/images/Icon/spot16.svg" alt="">
                         <span class="place fc-sub">嘉義縣</span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
     </div>
