--- a/2_event.html
+++ b/2_event.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>台灣走走</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/nav-page.css">
     <!--google fonts-->
